<resources>
    <string name="app_name">The Movie DataBase</string>
    <string name="home_screen_title">Now Playing Movies</string>
    <string name="loading_text">Loading…</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_internet_txt_body">There is no internet connection, Please Connect and Try again.</string>
    <string name="no_internet_connection_title">No Internet Connection!</string>
    <string name="empty_list_description">There is no Movies found, Please come back later</string>
    <string name="no_movies_title">No Now Playing Movies</string>

    <!--Movie Recycler View Adapter-->
    <string name="number_of_votes_txt">Number of Votes: &#160;%s</string>
    <string name="average_vote_txt">Average Vote: &#160;%s</string>
    <string name="adult_content_warning_txt">WARNING!! ADULT CONTENT MOVIE(R18+).</string>
    <string name="movie_release_date_txt">Released on &#160;%s</string>
    <string name="default_user_name">John cater</string>
</resources>
