<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Ilanthirayan Paramanathan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="HomeFragmentBinding">

        <import type="android.view.View" />

    </data>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/movies_list_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <android.support.constraint.Guideline
                    android:id="@+id/constraint_layout_guide_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.15" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.2" />


                <android.support.constraint.Guideline
                    android:id="@+id/constraint_layout_guide_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.85" />

                <LinearLayout
                    android:id="@+id/no_internet_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="@+id/constraint_layout_guide_left"
                    app:layout_constraintRight_toLeftOf="@+id/constraint_layout_guide_right"
                    app:layout_constraintTop_toTopOf="@+id/guideline">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/avd_heart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="6sp"
                        android:text="@string/no_internet_connection_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="6sp"
                        android:lineSpacingMultiplier="0.8"
                        android:text="@string/no_internet_txt_body"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/empty_list_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="@+id/constraint_layout_guide_left"
                    app:layout_constraintRight_toLeftOf="@+id/constraint_layout_guide_right"
                    app:layout_constraintTop_toTopOf="@+id/guideline">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/avd_heart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="6sp"
                        android:text="@string/no_movies_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="6sp"
                        android:lineSpacingMultiplier="0.8"
                        android:text="@string/empty_list_description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loading_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintLeft_toLeftOf="@+id/constraint_layout_guide_left"
                    app:layout_constraintRight_toLeftOf="@+id/constraint_layout_guide_right"
                    app:layout_constraintTop_toTopOf="@+id/guideline">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="100dp" />

                    <ProgressBar
                        style="?android:attr/progressBarStyleInverse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:lineSpacingMultiplier="0.8"
                        android:text="@string/loading_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:visibility="gone"
                tools:context=".presentation_layer.main.MainActivity" />
        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</layout>